--- a/TPS.Web/packages.config
+++ b/TPS.Web/packages.config
@@ -5,6 +5,15 @@
   <package id="AspNetWebApi" version="4.0.20126.16343" />
   <package id="AspNetWebApi.Core" version="4.0.20126.16343" />
   <package id="AspNetWebPages.Core" version="2.0.20126.16343" />
+  <package id="Castle.Core" version="3.0.0.4001" />
+  <package id="Castle.Windsor" version="3.0.0.4001" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="DataAnnotationsExtensions" version="1.0.2.0" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
+  <package id="elmah" version="1.2.2" />
+  <package id="elmah.corelibrary" version="1.2.2" />
+  <package id="FluentNHibernate" version="1.3.0.727" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="jQuery" version="1.6.4" />
   <package id="jQuery.Ajax.Unobtrusive" version="2.0.20126.16343" />
   <package id="jquery.mobile" version="1.0" />
@@ -15,10 +24,18 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.Web.Optimization" version="1.0.0-beta" />
   <package id="Modernizr" version="2.0.6" />
+  <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" />
+  <package id="Newtonsoft.Json" version="4.5.4" />
+  <package id="NHibernate" version="3.3.0.4000" />
+  <package id="NHibernateProfiler" version="1.0.0.935" />
   <package id="System.Json" version="4.0.20126.16343" />
   <package id="System.Net.Http" version="2.0.20126.16343" />
   <package id="System.Net.Http.Formatting" version="4.0.20126.16343" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" />
   <package id="System.Web.Providers" version="1.1" />
   <package id="System.Web.Providers.Core" version="1.0" />
+  <package id="UcdArch" version="3.3.0.70" />
+  <package id="UcdArch.Mvc" version="3.3.0.70" />
+  <package id="UcdArch.NHibernate" version="3.3.0.70" />
+  <package id="WebActivator" version="1.5" />
 </packages>
