--- a/TPS.Web/Web.config
+++ b/TPS.Web/Web.config
@@ -16,16 +16,21 @@
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
+      <!--<property name="proxyfactory.factory_class">NHibernate.ByteCode.Spring.ProxyFactoryFactory, NHibernate.ByteCode.Spring</property>-->
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
       <property name="connection.connection_string_name">MainDB</property>
-      <property name="default_schema">Northwind.dbo</property>
+      <property name="default_schema">MothraDataMart.dbo</property>
       <property name="generate_statistics">true</property>
       <property name="adonet.batch_size">25</property>
+      <!--<property name="cache.provider_class">NHibernate.Cache.HashtableCacheProvider</property>
+      <property name="cache.use_second_level_cache">true</property>
+      <property name="cache.use_query_cache">true</property>-->
     </session-factory>
   </hibernate-configuration>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=Northwind;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="Data Source=terry;Initial Catalog=MothraDataMart;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="CATBERT" connectionString="Data Source=terry;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -35,7 +40,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
@@ -47,28 +58,29 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="MvcContrib.FluentHtml"/>
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
+    <!--<profile defaultProvider="DefaultProfileProvider">
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
-    </profile>
+    </profile>-->
     <membership defaultProvider="DefaultMembershipProvider">
       <providers>
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
+    <!--<roleManager defaultProvider="DefaultRoleProvider">
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
-    </roleManager>
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    </roleManager>-->
+    <!--<sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
-    </sessionState>
+    </sessionState>-->
     <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
@@ -101,7 +113,7 @@
   </runtime>
   <elmah>
     <!--
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
         more information on remote access and securing ELMAH.
     -->
     <security allowRemoteAccess="false" />
@@ -111,13 +123,13 @@
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
       </httpHandlers>
-      <!-- 
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+      <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
         more information on using ASP.NET authorization securing ELMAH.
 
       <authorization>
         <allow roles="admin" />
-        <deny users="*" />  
+        <deny users="*" />
       </authorization>
       -->
     </system.web>
