--- a/TPS.Web/packages.config
+++ b/TPS.Web/packages.config
@@ -17,6 +17,7 @@
   <package id="jQuery" version="1.7.2" />
   <package id="jQuery.Ajax.Unobtrusive" version="2.0.20126.16343" />
   <package id="jquery.mobile" version="1.1.0" />
+  <package id="jQuery.Mobile.MVC" version="0.0.2" />
   <package id="jQuery.UI.Combined" version="1.8.19" />
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.Validation.Unobtrusive" version="2.0.20126.16343" />
