--- a/TPS.Web/Web.config
+++ b/TPS.Web/Web.config
@@ -23,9 +23,9 @@
       <property name="default_schema">MothraDataMart.dbo</property>
       <property name="generate_statistics">true</property>
       <property name="adonet.batch_size">25</property>
-      <!--<property name="cache.provider_class">NHibernate.Cache.HashtableCacheProvider</property>
+      <property name="cache.provider_class">NHibernate.Cache.HashtableCacheProvider</property>
       <property name="cache.use_second_level_cache">true</property>
-      <property name="cache.use_query_cache">true</property>-->
+      <property name="cache.use_query_cache">true</property>
     </session-factory>
   </hibernate-configuration>
   <connectionStrings>
