--- a/TPS.Core/TPS.Core.csproj
+++ b/TPS.Core/TPS.Core.csproj
@@ -37,10 +37,10 @@
       <HintPath>..\packages\DataAnnotationsExtensions.1.1.0.0\lib\NETFramework40\DataAnnotationsExtensions.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
-      <HintPath>..\Bin\FluentNHibernate.dll</HintPath>
+      <HintPath>..\..\Bin\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
-      <HintPath>..\Bin\NHibernate.dll</HintPath>
+      <HintPath>..\..\Bin\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,7 +50,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UCDArch">
-      <HintPath>..\Bin\UCDArch.dll</HintPath>
+      <HintPath>..\..\Bin\UCDArch.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
