Added a number of new classes for testing IndexedDB.

--- a/TPS.Core/TPS.Core.csproj
+++ b/TPS.Core/TPS.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Domain\Building.cs" />
     <Compile Include="Domain\College.cs" />
     <Compile Include="Domain\BillingId.cs" />
+    <Compile Include="Domain\DataNamFlattened.cs" />
     <Compile Include="Domain\DataNam.cs" />
     <Compile Include="Domain\Department.cs" />
     <Compile Include="Domain\Division.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Mappings\CollegeMap.cs" />
     <Compile Include="Mappings\BillingIdMap.cs" />
     <Compile Include="Mappings\DataNamMap.cs" />
+    <Compile Include="Mappings\DataNamFlattenedMap.cs" />
     <Compile Include="Mappings\DepartmentMap.cs" />
     <Compile Include="Mappings\DivisionMap.cs" />
     <Compile Include="Mappings\MaskMap.cs" />
