--- a/TPS.Web/TPS.Web.csproj
+++ b/TPS.Web/TPS.Web.csproj
@@ -100,6 +100,8 @@
       <Private>True</Private>
       <HintPath>..\packages\System.Net.Http.2.0.20126.16343\lib\net40\System.Net.Http.WebRequest.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -171,6 +173,7 @@
     <Compile Include="ComponentRegistrar.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Controllers\NamsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NamSearchController.cs" />
     <Compile Include="Controllers\ViewSwitcherController.cs" />
@@ -179,6 +182,7 @@
     </Compile>
     <Compile Include="Helpers\PhoneFormatter.cs" />
     <Compile Include="Helpers\PredicateBuilder.cs" />
+    <Compile Include="Models\FlattenedNamModel.cs" />
     <Compile Include="Models\NamSearchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -338,6 +342,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\NamSearch\GettingStartedTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\AllNams.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\NamDbTest.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
