Let's try this again.  "Gitting" hung yesterday when trying to commit and push.
Successfully got index cursors working, including returning all NAMs for a given building or a given department.  This required using the IDBIndexKeyRange.only.

Also used building and department indexes to populate the building and department drop-down lists.  Using the index in this fashion allows us to get a sorted list of the key values, i.e. buildings or departments, without having to explicitly sort them.

--- a/TPS.Core/TPS.Core.csproj
+++ b/TPS.Core/TPS.Core.csproj
@@ -86,6 +86,15 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\indexeddb.shim.js" />
+    <Content Include="Scripts\jquery-1.7.2-vsdoc.js" />
+    <Content Include="Scripts\jquery-1.7.2.js" />
+    <Content Include="Scripts\jquery-1.7.2.min.js" />
+    <Content Include="Scripts\Linq2IndexedDB.js" />
+    <Content Include="Scripts\Sort.js" />
+    <Content Include="Scripts\Where.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
