--- a/TPS.Web/Web.config
+++ b/TPS.Web/Web.config
@@ -29,8 +29,8 @@
     </session-factory>
   </hibernate-configuration>
   <connectionStrings>
-    <add name="MainDB" connectionString="Data Source=terry;Initial Catalog=MothraDataMart;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="CATBERT" connectionString="Data Source=terry;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="MainDB" connectionString="Data Source=vogel;Initial Catalog=MothraDataMart;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CATBERT" connectionString="Data Source=vogel;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -58,7 +58,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-        <add namespace="MvcContrib.FluentHtml"/>
+        <add namespace="MvcContrib.FluentHtml" />
       </namespaces>
     </pages>
     <!--<profile defaultProvider="DefaultProfileProvider">
