--- a/TPS.Web/packages.config
+++ b/TPS.Web/packages.config
@@ -14,14 +14,16 @@
   <package id="elmah.corelibrary" version="1.2.2" />
   <package id="FluentNHibernate" version="1.3.0.727" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="IndexedDBViewer" version="1.0.2" />
   <package id="jQuery" version="1.7.2" />
   <package id="jQuery.Ajax.Unobtrusive" version="2.0.20126.16343" />
   <package id="jquery.mobile" version="1.1.0" />
   <package id="jQuery.Mobile.MVC" version="0.0.2" />
-  <package id="jQuery.UI.Combined" version="1.8.19" />
+  <package id="jQuery.UI.Combined" version="1.8.20" />
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.Validation.Unobtrusive" version="2.0.20126.16343" />
   <package id="knockoutjs" version="2.0.0.1" />
+  <package id="Linq2IndexedDB" version="1.0.3" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.Web.Optimization" version="1.0.0-beta" />
   <package id="Modernizr" version="2.5.3" />
