--- a/TPS.Web/TPS.Web.csproj
+++ b/TPS.Web/TPS.Web.csproj
@@ -173,8 +173,11 @@
     <Compile Include="ComponentRegistrar.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Controllers\DepartmentsController.cs" />
+    <Compile Include="Controllers\VlansController.cs" />
     <Compile Include="Controllers\NamsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\BuildingsController.cs" />
     <Compile Include="Controllers\NamSearchController.cs" />
     <Compile Include="Controllers\ViewSwitcherController.cs" />
     <Compile Include="Global.asax.cs">
@@ -415,6 +418,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\NamSearch\MultipleSelectionIndexedDbTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\LocalStorageDbTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\MultipleSelectionLocalStorageDbTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\GlobalArrayTest.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
