--- a/TPS.Web/TPS.Web.csproj
+++ b/TPS.Web/TPS.Web.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Helpers\PredicateBuilder.cs" />
     <Compile Include="Models\FlattenedNamModel.cs" />
     <Compile Include="Models\NamSearchModel.cs" />
+    <Compile Include="Models\DnsTestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -427,6 +428,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\NamSearch\GlobalArrayTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NamSearch\DnsTest.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
